[package]
name = "llm-pii-redact"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Regex-based PII redaction for LLM prompts and tool outputs, with reversible placeholders."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
repository = "https://github.com/MukundaKatta/llm-pii-redact-rs"
homepage = "https://github.com/MukundaKatta/llm-pii-redact-rs"
documentation = "https://docs.rs/llm-pii-redact"
readme = "README.md"
keywords = ["llm", "pii", "redact", "ai", "privacy"]
categories = ["text-processing", "api-bindings"]
exclude = [".github/*", "target/*"]

[dependencies]
regex = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]
