[package]
name = "llm-pii-redact"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "Reversible PII redaction for LLM prompts"
license = "MIT"
repository = "https://github.com/MukundaKatta/llm-pii-redact-rs"
keywords = ["pii", "redaction", "llm", "privacy", "regex"]
categories = ["text-processing"]
exclude = ["target/*", ".github/*", "*.log"]

[dependencies]
regex = "1"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
serde = ["dep:serde"]

[package.metadata.docs.rs]
# Build docs on docs.rs with all features so `Redacted`'s serde impls show up.
all-features = true
